fix: Blind rolls are legible  again

--- a/src/style/chat/chat-shared.css
+++ b/src/style/chat/chat-shared.css
@@ -11,6 +11,18 @@
       margin-bottom: .5em;
     }
   }
+
+  &.whisper {
+    @media (prefers-color-scheme: dark) {
+      background: var(--highlight-bg-color)
+    }
+  }
+
+  &.blind {
+    @media (prefers-color-scheme: dark) {
+      background: rgba(var(--highlight-color-base), .45)
+    }
+  }
 }
 
 .message-content {
